Изменён способ вывода сообщений. Исправлен CMakeLists. Изменена структура проекта. Обновлён README.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-TestParser
-/CMakeFiles
-CMakeCache.txt
-cmake_install.cmake
+/src/*.o
+/src/*.swp
+/src/*~
+/src/*.swp
 *.user
 *.cbp
-*swp
-Makefile
 *~
