Изменена структура проекта. Парсер вынесен в отдельный класс.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,22 @@
-
 cmake_minimum_required(VERSION 2.8)
+project(SmartCalc)
+set(SOURCE_CODE main.cpp)
+set(SOURCE_DIR ./src)
+set(INCLUDE_DIR ./include)
+include_directories(${INCLUDE_DIR})
 
+set(SOURCE ${SOURCE_DIR}/parser.cpp
+					 ${SOURCE_DIR}/log.cpp
+					 ${SOURCE_DIR}/math/math_fucn.cpp)
 
-set(PROJECT smartcalc)
+set(HEADER ${INCLUDE_DIR}/parser.h
+					 ${INCLUDE_DIR}/log.h
+					 ${INCLUDE_DIR}/math/math_func.h)
 
-project(${PROJECT} CXX)
-
-set(SRCDIR ${PROJECT_SOURCE_DIR}/src/)
-
-aux_source_directory(${SRCDIR} SRC_LIST)
-
-add_executable(${PROJECT} ${SRC_LIST})
+if(${CMAKE_SYSTEM_NAME} STREQUAL Linux)
+	add_definitions(-D_lin)
+	add_executable(smartcalc ${HEADER} ${SOURCE} ${SOURCE_CODE})
+elseif($(CMAKE_SYSTEM_NAME) STREQUAL Windows)
+	add_definitions(-D_win32)
+	add_executable(smartcalc ${HEADER} ${SOURCE} ${SOURCE_CODE})
+endif()
