--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
-project(Calculator_temporarily)
+project(SmartCalc)
 set(SOURCE_CODE main.cpp)
 set(SOURCE_DIR ./src)
 set(INCLUDE_DIR ./include)
 include_directories(${INCLUDE_DIR})
 
 set(SOURCE ${SOURCE_DIR}/parser.cpp
-					 ${SOURCE_DIR}/log.cpp
-					 ${SOURCE_DIR}/math/math_fucn.cpp)
+					 ${SOURCE_DIR}/log.cpp)
 
 set(HEADER ${INCLUDE_DIR}/parser.h
 					 ${INCLUDE_DIR}/log.h
@@ -15,8 +14,8 @@ set(HEADER ${INCLUDE_DIR}/parser.h
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL Linux)
 	add_definitions(-D_lin)
-	add_executable(calc_0.1.1 ${HEADER} ${SOURCE} ${SOURCE_CODE})
+	add_executable(smartc_0_1 ${HEADER} ${SOURCE} ${SOURCE_CODE})
 elseif($(CMAKE_SYSTEM_NAME) STREQUAL Windows)
 	add_definitions(-D_win32)
-	add_executable(calc_0.1.1 ${HEADER} ${SOURCE} ${SOURCE_CODE})
+	add_executable(smartc_0_1 ${HEADER} ${SOURCE} ${SOURCE_CODE})
 endif()
